@@ -19,8 +19,6 @@
   <ProjectSessionItem path="LPC1114_CodeBase" name="unnamed" />
   <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase" name="unnamed" />
   <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files" name="unnamed" />
-  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers" name="unnamed" />
-  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers;chibi" name="unnamed" />
  </Project>
  <Register1>
   <RegisterWindow openNodes="CT16B1/TMR16B1PWMC;GPIO2" binaryNodes="GPIO1/GPIO1DATA" hiddenNodes="" unsignedNodes="" visibleGroups="GPIO2;CT16B1;GPIO1" decimalNodes="" octalNodes="" asciiNodes="" />
@@ -56,8 +54,7 @@
   <Watches active="0" update="Never" />
  </Watch4>
  <Files>
-  <SessionOpenFile useTextEdit="1" useBinaryEdit="0" codecName="Latin1" x="0" debugPath="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\main.c" y="371" path="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\main.c" left="0" selected="0" name="unnamed" top="358" />
-  <SessionOpenFile useTextEdit="1" useBinaryEdit="0" codecName="Latin1" x="0" debugPath="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\drivers\chibi\chb_drvr.h" y="285" path="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\drivers\chibi\chb_drvr.h" left="0" selected="1" name="unnamed" top="270" />
+  <SessionOpenFile useTextEdit="1" useBinaryEdit="0" codecName="Latin1" x="81" debugPath="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\main.c" y="31" path="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\main.c" left="0" selected="1" name="unnamed" top="69" />
  </Files>
  <ARMCrossStudioWindow activeProject="LPC1114_CodeBase" autoConnectTarget="Segger J-Link" debugSearchFileMap="" fileDialogInitialDirectory="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\core\libc" fileDialogDefaultFilter="*.c" autoConnectCapabilities="388991" debugSearchPath="" buildConfiguration="THUMB Flash Release" />
 </session>
