@@ -33,46 +33,27 @@
     SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 /**************************************************************************/
-#include <stdlib.h>
-#include <stdio.h>
-#include <string.h>
-
 #include "projectconfig.h"
 #include "sysinit.h"
 
 #include "core/gpio/gpio.h"
-#include "core/systick/systick.h"
+#include "drivers/chibi/chb.h"
+#include "drivers/chibi/chb_drvr.h"
 
-#ifdef CFG_INTERFACE
-  #include "core/cmd/cmd.h"
-#endif
-
-/**************************************************************************/
-/*! 
-    Approximates a 1 millisecond delay using "nop".  This is less
-    accurate than a dedicated timer, but is useful in certain situations.
-
-    The number of ticks to delay depends on the optimisation level set
-    when compiling (-O).  Depending on the compiler settings, one of the
-    two defined values for 'delay' should be used.
-*/
-/**************************************************************************/
-void delayms(uint32_t ms)
-{
-  uint32_t delay = ms * ((CFG_CPU_CCLK / 100) / 45);      // Release Mode (-Os)
-  // uint32_t delay = ms * ((CFG_CPU_CCLK / 100) / 120);  // Debug Mode (No optimisations)
-
-  while (delay > 0)
-  {
-    __asm volatile ("nop");
-    delay--;
-  }
-}
+static chb_rx_data_t rx_data;
 
 /**************************************************************************/
 /*! 
-    Main program entry point.  After reset, normal code execution will
-    begin here.
+    Constantly checks for incoming messages, and displays them using
+    printf when they arrive.  This program will display messages sent
+    to the global broadcast address (0xFFFF) or messages addressed to
+    this node using it's unique 16-bit ID.
+
+    projectconfig.h settings:
+    --------------------------------------------------
+    CFG_CHIBI             -> Enabled
+    CFG_CHIBI_PROMISCUOUS -> 0
+    CFG_CHIBI_BUFFERSIZE  -> 128
 */
 /**************************************************************************/
 int main(void)
@@ -80,30 +61,26 @@ int main(void)
   // Configure cpu and mandatory peripherals
   systemInit();
 
-  uint32_t currentSecond, lastSecond;
-  currentSecond = lastSecond = 0;
+  // Get a reference to the Chibi peripheral control block
+  chb_pcb_t *pcb = chb_get_pcb();
 
-  while (1)
+  while(1)
   {
-    // Toggle LED once per second ... rollover = 136 years :)
-    currentSecond = systickGetSecondsActive();
-    if (currentSecond != lastSecond)
-    {
-      lastSecond = currentSecond;
-      if (gpioGetValue(CFG_LED_PORT, CFG_LED_PIN) == CFG_LED_OFF)
+    // Check for incoming messages 
+    while (pcb->data_rcv) 
+    { 
+      // Enable LED to indicate message reception 
+      gpioSetValue (CFG_LED_PORT, CFG_LED_PIN, CFG_LED_ON); 
+      // get the length of the data
+      rx_data.len = chb_read(&rx_data);
+      // make sure the length is nonzero
+      if (rx_data.len)
       {
-        gpioSetValue (CFG_LED_PORT, CFG_LED_PIN, CFG_LED_ON); 
+        printf("Message received from node %02X: %s, len=%d, rssi=%02X.%s", rx_data.src_addr, rx_data.data, rx_data.len, pcb->ed, CFG_PRINTF_NEWLINE);
       }
-      else
-      {
-        gpioSetValue (CFG_LED_PORT, CFG_LED_PIN, CFG_LED_OFF); 
-      }
+      // Disable LED
+      gpioSetValue (CFG_LED_PORT, CFG_LED_PIN, CFG_LED_OFF); 
     }
-
-    // Poll for CLI input if CFG_INTERFACE is enabled in projectconfig.h
-    #ifdef CFG_INTERFACE 
-      cmdPoll(); 
-    #endif
   }
 
   return 0;
