@@ -1,0 +1,3 @@
+Looks for any incoming messages using the global broadcast address
+(0xFFFF) of this node's addresses and displays the message content
+using printf (redirect to UART by default).
