@@ -1,0 +1,5 @@
+Uses 'PROMISCUOUS' mode in Chibi, which listens to ANY message available within
+hearing range, and logs the messages to the SD card in libpcap format (which can be
+opened directly in Wireshark).  This useful functionality is perfect for debugging
+wireless sensor networks since you can capture, log and later analyse all traffic
+and frame data moving around the wireless sensor network.
