@@ -1,0 +1,7 @@
+This folder contains various examples showing how to use the LPC1114 to
+accomplish certain tasks or get started using a specific peripheral, etc..
+
+To use them, replace the main.c file in the root folder of the lpc1343
+code base with the main.c in the example folder and recompiled your
+project.  Any changes that need to be made to projectconfig.h
+should be indicated in the comments of the new main.c file.
